<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_station"
            android:icon="@drawable/ic_solar"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery_ships"
            android:icon="@drawable/ic_spaceship"
            android:title="@string/gallery_ships" />
        <item
            android:id="@+id/nav_gallery_ground"
            android:icon="@drawable/ic_space_car"
            android:title="@string/gallery_ground" />
        <item
        android:id="@+id/nav_info_weapon"
        android:icon="@drawable/ic_ray_gun"
        android:title="@string/info_weapon" />
        <item
            android:id="@+id/nav_info_fit_ship"
            android:icon="@drawable/ic_gunsight"
            android:title="@string/info_fit" />
    </group>
</menu>