<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_item_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_item"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_margin="5dp"
            android:clickable="true"
            android:contentDescription="@string/todo"
            android:focusable="true" />

        <TextView
            android:id="@+id/tv_price_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:contentDescription="@string/todo"
            android:gravity="center"
            android:textSize="25dp"
            android:padding="5dp"
            android:text="@string/in_concept"
            android:textColor="@color/colorPrimary" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/tv_title_item"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/title_ship"
            android:textColor="#A0522D"
            android:textSize="25sp" />


    </LinearLayout>


    <TextView
        android:id="@+id/tv_class_item"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/class_ship"
        android:textColor="#8B0000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_info_item"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:fontFamily="monospace"
        android:padding="5dp"
        android:text="@string/info_ship"
        android:textColor="#D2B48C"
        android:textSize="12sp" />

</LinearLayout>